added configuration for all security settings.